<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kitchen Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_time0">00:00</string>
    <string name="string_beep">Beep!</string>
    <string name="string_startStop">START/STOP</string>
    <string name="string_plus">+</string>
    <string name="string_minus">-</string>
    <string name="string_reset">RESET</string>
    
</resources>
